unpackaged/main/default/objects/Claim/Claim.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>