unpackaged/main/default/objects/Claim/fields/Accidental_Damage_Report__c.field-meta.xml
<CustomField>
    <fullName>Accidental_Damage_Report__c</fullName>
    <label>Accidental Damage Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>