unpackaged/main/default/objects/Claim/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional  Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>