unpackaged/main/default/objects/Claim/fields/Date_Time_Vehicle_Left__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Vehicle_Left__c</fullName>
    <label>Date/Time Vehicle Left</label>
    <type>DateTime</type>
</CustomField>