unpackaged/main/default/objects/Claim/fields/Date_Vehicle_Left__c.field-meta.xml
<CustomField>
    <fullName>Date_Vehicle_Left__c</fullName>
    <label>Date Vehicle Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>