unpackaged/main/default/objects/Claim/fields/Entry_Gained_Van_Description__c.field-meta.xml
<CustomField>
    <fullName>Entry_Gained_Van_Description__c</fullName>
    <label>Entry Gained Van Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>