unpackaged/main/default/objects/Claim/fields/Fire_Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>Fire_Incident_Report__c</fullName>
    <label>Fire Incident Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>