unpackaged/main/default/objects/Claim/fields/Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report__c</fullName>
    <label>Incident Report</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>