unpackaged/main/default/objects/Claim/fields/Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Date__c</fullName>
    <label>Initiation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>