unpackaged/main/default/objects/Claim/fields/Initiation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Date_Time__c</fullName>
    <description>Initiation Date/Time</description>
    <formula>DATETIMEVALUE(LEFT(Initiation_Date__c , 10) + &quot; &quot; + LEFT(Initiation_Time__c, 2) + &quot;:&quot; + RIGHT(Initiation_Time__c, 2) + &quot;:00&quot;)</formula>
    <label>Initiation Date/Time</label>
    <type>DateTime</type>
</CustomField>