unpackaged/main/default/objects/Claim/fields/Initiation_Time__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Time__c</fullName>
    <label>Initiation Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>