unpackaged/main/default/objects/Claim/fields/Instanda_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Instanda_Claim_Number__c</fullName>
    <externalId>true</externalId>
    <label>Instanda Claim Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>