unpackaged/main/default/objects/Claim/fields/Loss_Location__c.field-meta.xml
<CustomField>
    <fullName>Loss_Location__c</fullName>
    <label>Loss Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No - Another location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>