unpackaged/main/default/objects/Claim/fields/Police_Report__c.field-meta.xml
<CustomField>
    <fullName>Police_Report__c</fullName>
    <label>Police Report</label>
    <length>100</length>
    <type>Text</type>
</CustomField>