unpackaged/main/default/objects/Claim/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>PolicyNumber.Instanda_Policy_Number__c</formula>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>