unpackaged/main/default/objects/Claim/fields/Time_Vehicle_Left__c.field-meta.xml
<CustomField>
    <fullName>Time_Vehicle_Left__c</fullName>
    <label>Time Vehicle Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>