unpackaged/main/default/objects/Claim/fields/Vehicle_Claimed_On__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Claimed_On__c</fullName>
    <label>Vehicle Claimed On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Unconfirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>