unpackaged/main/default/objects/Claim/fields/Vehicle_Left_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Left_Date_Time__c</fullName>
    <description>Vehicle Left Date/Time</description>
    <formula>DATETIMEVALUE(LEFT(Date_Vehicle_Left__c , 10) + &quot; &quot; + LEFT(Time_Vehicle_Left__c, 2)  + &quot;:&quot; +  RIGHT(Time_Vehicle_Left__c, 2) + &quot;:00&quot;)</formula>
    <label>Vehicle Left Date/Time</label>
    <type>DateTime</type>
</CustomField>