unpackaged/main/default/objects/Claim/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>ClaimType</columns>
    <columns>Vehicle_Claimed_On__c</columns>
    <columns>EstimatedAmount</columns>
    <columns>ActualAmount</columns>
    <columns>ApprovedAmount</columns>
    <columns>CreatedBy</columns>
    <columns>IsClosed</columns>
    <columns>CreatedDate</columns>
    <columns>Incident_Report__c</columns>
    <columns>LossDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Claims</label>
</ListView>