unpackaged/main/default/objects/Claim/listViews/Sales_Claim.listView-meta.xml
<ListView>
    <fullName>Sales_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales</label>
    <queue>Sales</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>